--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -21,7 +21,7 @@ $black: #04040a;
           background: {
             repeat: no-repeat;
             position: center;
-            image: url("../../../logo.png");
+            image: url("../../../logo.gif");
             size: contain;
           }
         }
